plugins {
    id 'java'
}

group 'org.example'
version '1.0'

jar {
    manifest {
        attributes "Main-Class": "xyz.fxti.zipstrings.Main"
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

compileJava   {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'org.ow2.asm:asm:9.2'
    implementation 'org.ow2.asm:asm-util:9.2'
    implementation 'com.google.code.gson:gson:2.8.7'
    implementation 'commons-io:commons-io:2.11.0'
}